recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:2: error: reassignment to val
  if (steps=0){
           ^